--- a/src/Styling/App.css
+++ b/src/Styling/App.css
@@ -83,8 +83,8 @@
   z-index: 10;
 }
 
-.sticky .app__dataLayout {
-  padding-top: 502px;
+.bodyExtension {
+  padding-top: 50px;
 }
 
 @media screen and (max-width: 1410px) {
