fixed the header height and sticky optimization

--- a/src/Styling/App.css
+++ b/src/Styling/App.css
@@ -131,9 +131,11 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    background-color: rgb(230, 230, 230);
-    border-radius: 10px;
     width: 100%;
+    transition: 1s;
+    padding: 10px;
+    box-shadow: 1px 5px 5px rgba(32, 32, 32, 0.6);
+    height: 45px;
   }
 
   .bodyExtension {
