--- a/src/Styling/App.css
+++ b/src/Styling/App.css
@@ -133,7 +133,8 @@
     flex-direction: row;
     width: 100%;
     transition: 1s;
-    padding: 10px;
+    padding: 4px;
+    padding-top: 0px;
     box-shadow: 1px 5px 5px rgba(32, 32, 32, 0.6);
   }
 
