--- a/src/Styling/header.css
+++ b/src/Styling/header.css
@@ -3,13 +3,20 @@
   justify-content: space-between;
   flex-direction: row;
   background-color: rgb(230, 230, 230);
-  padding: 10px 50px;
+  padding: 10px 10px;
   border-radius: 10px;
+  align-items: center;
 }
 
 .header__dd_img {
   display: flex;
   flex-direction: row;
+}
+
+.header__infoBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .header__title {
@@ -29,6 +36,12 @@
   margin-left: 15px;
 }
 
+.header__infoBox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* .header__right {
   margin-right: 70px;
 } */
@@ -40,7 +53,6 @@
   font-size: 16px;
   border: none;
   outline: none;
-  margin-top: 10px;
 }
 
 .header__dropbtn:hover {
@@ -58,10 +70,7 @@
 
 @media screen and (max-width: 1220px) {
   .header {
-    display: flex;
     justify-content: center;
-    flex-direction: row;
-    padding: 10px;
     flex-wrap: wrap;
   }
 
@@ -75,16 +84,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
-  .header {
-    padding: 5px;
-  }
-
-  .header_image {
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-
+@media screen and (max-width: 770px) {
   .header_image {
     height: 40px;
     width: 90px;
@@ -92,15 +92,13 @@
     margin-bottom: 0px;
   }
 
+  .header {
+    padding: 5px;
+  }
+
   .header__title {
     padding: 0px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .header__dd_img {
-    flex-direction: column;
-    align-items: center;
+    font-size: 20px;
   }
 }
 
