--- a/src/Styling/Footer.css
+++ b/src/Styling/Footer.css
@@ -1,11 +1,13 @@
 .footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   width: 100%;
-  height: fit-content;
+  max-width: 100%;
   background-color: rgb(230, 230, 230);
   padding: 5px;
   border-radius: 10px;
-  text-align: center;
-  vertical-align: middle;
+  align-items: center;
 }
 
 .footer a {
