--- a/src/Styling/App.css
+++ b/src/Styling/App.css
@@ -22,9 +22,9 @@
 .app__map_wrapper {
   position: relative;
   height: 302px;
-  width: 400px;
+  width: 29%;
   /* border: 1px solid rgb(199, 199, 199); */
-  flex-grow: 0.9;
+  /* flex-grow: 0.9; */
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -41,7 +41,7 @@
 
 .app__dataLayout {
   position: relative;
-  width: 965px;
+  width: 70%;
   height: fit-content;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -75,7 +75,7 @@
   display: flex;
 }
 
-@media screen and (max-width: 1410px) {
+@media screen and (max-width: 1150px) {
   .app__body {
     flex-direction: column;
     align-items: center;
