--- a/src/Styling/table.css
+++ b/src/Styling/table.css
@@ -17,6 +17,15 @@ th {
   background-color: rgb(170, 170, 170);
 }
 
+thead > tr > th {
+  position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  top: 0;
+}
+
 th,
 td {
   border: 1px solid rgb(220, 220, 220);
