added arrow to dropdown to keep showing always

--- a/src/Styling/header.css
+++ b/src/Styling/header.css
@@ -20,6 +20,10 @@
   justify-content: space-between;
 }
 
+input::-webkit-calendar-picker-indicator {
+  opacity: 100;
+}
+
 .header__title {
   color: black;
   padding: 12px;
@@ -54,6 +58,7 @@
   font-size: 16px;
   border: none;
   outline: none;
+  height: 8px;
 }
 
 .header__dropbtn:hover {
@@ -78,10 +83,6 @@
   .header_image {
     margin-left: 5px;
     margin-right: 5px;
-  }
-
-  .header__dropbtn {
-    height: 8px;
   }
 }
 
